# bookstore

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
